--- a/Debug/makefile
+++ b/Debug/makefile
@@ -10,6 +10,7 @@ GEN_OPTS__FLAG :=
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
+"./ads1247.obj" \
 "./buffer.obj" \
 "./main.obj" \
 "./sm_device.obj" \
@@ -157,8 +158,8 @@ SPI_COMM.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "buffer.obj" "main.obj" "sm_device.obj" "spi_uart.obj" 
-	-$(RM) "buffer.d" "main.d" "sm_device.d" "spi_uart.d" 
+	-$(RM) "ads1247.obj" "buffer.obj" "main.obj" "sm_device.obj" "spi_uart.obj" 
+	-$(RM) "ads1247.d" "buffer.d" "main.d" "sm_device.d" "spi_uart.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
